# voxceleron-engine

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat  imgui.ini  problems.md
release/: README.md  imgui.ini
release/shaders/: vertex_shader.vert.spv
release/v1/: README.md  imgui.ini
release/v1/shaders/: fragment_shader.frag.spv
release/v2/: README.md
release/v2.25/: README.md  imgui.ini
release/v2.25/shaders/: voxel_compute.comp.spv
release/v2.5/: imgui.lib
release/v2.50/: imgui.ini
release/v2.75/: README.md  imgui.lib
release/v2.75/shaders/: vertex_shader.vert
release/v2.76/: README.md  imgui.ini  imgui.lib
release/v2.77/: imgui.lib
release/v2.78/: imgui.lib
release/v2.79 - ready to optimize/: imgui.lib
release/v2/shaders/: voxel_compute.comp
release/v3.0/: README.md
release/v3.0/shaders/: basic.vert  basic.vert.spv  mesh_generator.comp  mesh_generator_optimized.comp
shaders/: basic.frag  basic.vert  mesh_generator.comp.spv  mesh_generator_optimized.comp.spv
src/: main.cpp
src/engine/: Camera.h  Chunk.cpp  Chunk.h  Engine.cpp  Engine.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  PerformanceMetrics.cpp  Renderer.cpp  Renderer.h  Vertex.cpp  Voxel.h  World.cpp  World.h  vertex_shader.vert
src/engine/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InputSystem.cpp  InputSystem.h  Window.cpp  Window.h
src/engine/voxel/: MeshTypes.h  VoxelTypes.h  World.cpp  World.cpp.old  World.h  WorldRenderer.cpp  WorldRenderer.h
src/engine/vulkan/compute/: MeshGenerator.cpp  MeshGenerator.h
src/engine/vulkan/core/: SwapChain.cpp  SwapChain.h  Vertex.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.h
src/engine/vulkan/pipeline/: Pipeline.cpp  Pipeline.h
src/engine/vulkan/shaders/: basic.frag  basic.vert
